xml/tests/testData/xml/ComplexSchemaValidation12.xsd
<?xml version="1.0" ?>
<!--
Test XML-schema
-->
<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema">
    <xs:element name="TestXSD">
	<xs:complexType>
	    <xs:sequence>
                <!--Type is not allowed with ref-->
                <xs:element ref="TestElement" <error descr="Attribute type is not allowed here when element reference is used">type</error>="xs:string"/>
	    </xs:sequence>
	</xs:complexType>
    </xs:element>


    <xs:element name="TestElement">
	<xs:complexType>
	    <xs:sequence>
	    	<xs:element name="Name" type="xs:string"/>
	    </xs:sequence>
	</xs:complexType>
    </xs:element>
</xs:schema>
